# cadence-cli

./: .gitignore  .release-please-config.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  NOTES.md  OVERALL_PLAN.md  PLAN.md  README.md  REVIEW.md  TODO.md  build.rs  install.ps1  install.sh  test_install_gpg.sh
07/: 05400a8cbde8e1e825bd97afcc0423072e2c4e892abd9666c67134ffa00119--0001.ndjson
0c/: 3b476d2f91c45dd2ffd57b04c9cb151b7e66f9938eeb3e6e63e1e7bf43488f--0001.ndjson
16/: 9f98f5a26562a5c32c426deee8cc3a709b06ed1e84ae0a4cfcb9612025d154--0001.ndjson  b8910df28137d11159008cce95f31eb3b1480d9239573efa5aa04fd7296c6e--0001.ndjson
22/: f06d0568ac97a178adeaf82083b28d6a168c73cd1cd6bcee737b28c0734c1d--0001.ndjson
23/: dd58d490d41d9068766d3590a6f95f52e3ade812e6169bae78af9e3a3ff0ac--0001.ndjson
2b/: f032679a10a3354216c63e07add5438bc0ad1332dcbe66bc837a962385f664--0001.ndjson
2c/: 603c81abb76884228de536eaa02f96218f3e4b06f1ffa0dac01764b2a262ee--0001.ndjson
2f/: f46c41909d930c7512924f27e8358875fd0bfa068c2606c83c7347289fb2e1--0001.ndjson
30/: d54fb54e748fdf8674d4f45bcb8385e55542bc1569847985ea28c32f81e462--0001.ndjson
33/: 7feb5846ca0da7cd51cd8d88b2c0afe2058530e3a491918b4b1703781eac1f--0001.ndjson
3e/: 484e5f9c7da668306a73c55e386cc0c37debe0e584ad295e958467f0d66aa9--0001.ndjson
4a/: 3333f01573e7c618edab1726bfb685bc0056fb35a2fbdba95e61ddcaf213c7--0001.ndjson
54/: 240f7d7a4b65331a27d2adb6ab6dc30c5d236b0e526e88d846751a49f524ce--0001.ndjson  5143832146e2ce7ff3e0bd58af6d6f462cfbc444e277fb6a2ce507895021a0--0001.ndjson  ceb574902117f1db4a525e61f5f4c0b78a48f3084102b3987e7d17dc311b21--0001.ndjson
56/: 07819a53c477af11e6968994efd090c11147866bc1f5c22fb23ed0d4cc8307--0001.ndjson
57/: b6285177902dba492114591cfbcbf1468666c2b59352c48878630a54b673e0--0001.ndjson
59/: 74ff3f52bd5eed97942986734ec45791b3c321de8f9e74df661869d54bbdfb--0001.ndjson
5c/: 7cb4ad6415cdd3cc6ddb7ead3c562f486516c721697246f711b3483a5c9aa7--0001.ndjson
5e/: 0a3a5ea730029b931f9c01ec8554a4ac937ee79626a85e69c91625152d1807--0001.ndjson
63/: 03d02ce700c9c9d54267fef712882917d9785d1d43176f20938adb2b408497--0001.ndjson  ede03840aa5255afab08e3623b786aab04b10cb925a50ee32e029f8bd57cff--0001.ndjson
6b/: fb0dfbf291403becd3ce35c184cd1ca8d73943bc052124ca926c6f42c7a6f1--0001.ndjson
7d/: 51e73d66d6650011b0b4251484a83c8ba5e292d89d91d024e20209c82c87be--0001.ndjson  dc1f210bf781a19f84eefdc88607685f65ae949b5aa5eff82b4fc860e0f6ac--0001.ndjson
80/: 9feece2a87053ac8025747bef1bf4f81322f633f55ec77285541429cbabf7b--0001.ndjson
82/: 3dbf20f5b2b596e0470c78d27659fef747b5f3db70f63ff89a85ffa890a097--0001.ndjson
86/: a61b1a315e0a87832dcc18857e50027bb7f9621fa3b77a1f466ca9356c7b27--0001.ndjson  a61b1a315e0a87832dcc18857e50027bb7f9621fa3b77a1f466ca9356c7b27--0002.ndjson
88/: e129a5b9c96653c961e296f357f372eb8c6388978521ba325fd422ffaa36f0--0001.ndjson
8c/: 8909b1227720baf96435087ecb7de05722f2abd1c1ee0aa1197012fcb5cd88--0001.ndjson
docs/: background-monitor-plan.md  (+2 more)
(+82 files in other folders)
