[package]
name = "cadence-cli"
version = "0.2.1"
edition = "2024"

[[bin]]
name = "cadence"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
console = "0.15"
dialoguer = "0.11"
indicatif = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
time = { version = "0.3", features = ["parsing", "formatting"] }
open = "5"
rand = "0.9"
rand08 = { package = "rand", version = "0.8" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
toml = "0.8"
url = "2"
pgp = "0.14"

[dev-dependencies]
serial_test = "3"
filetime = "0.2"
