[package]
name = "cadence-cli"
version = "2.1.2"
edition = "2024"

[lib]
name = "cadence_cli"
path = "src/lib.rs"

[[bin]]
name = "cadence"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
console = "0.15"
dialoguer = "0.11"
indicatif = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
time = { version = "0.3", features = ["parsing", "formatting"] }
rand = "0.9"
rand08 = { package = "rand", version = "0.8" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "fs", "io-util", "net", "sync", "time"] }
semver = "1"
toml = "0.8"
pgp = "0.14"
self-replace = "1"
flate2 = "1"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
zstd = "0.13"
open = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
protobuf = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "std", "time"] }
uuid = { version = "1", features = ["v4", "serde"] }
libc = "0.2"
sysinfo = "0.30"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Threading"] }

[dev-dependencies]
serial_test = "3"
filetime = "0.2"
